# kattis-aliencodebreaker

./: Cargo.toml  Makefile  README.md
src/: checkpoints.rs  main.rs
tests/: stateless-journey.sh
tests/fixtures/: valid-big.input  valid-massive.input  valid-medium.input  valid.input
tests/snapshots/: success-input-file-produces-correct-output-huge  success-input-file-produces-correct-output-large
