[package]
name = "codebreaker"
version = "1.0.0"
authors = ["Sebastian Thiel <byronimo@gmail.com>"]
publish = false

[[bin]]
name="codebreaker"
path="src/main.rs"

[[bin]]
name="gencheckpoints"
path="src/checkpoints.rs"

[profile.release]
incremental = false
overflow-checks = false

[dependencies]
num-bigint = "0.2.1"
